# ROBOT4KID

./: .env.example  .gcloudignore  .gitignore  CLAUDE.md  POST_MORTEM.md  README.md  run_grand_audit.py
.github/workflows/: ci.yml
cad/: assembly.scad  assembly_v2.scad
cad/chassis/: electronics_bay.scad  hull.scad  (+4 more)
config/: export_scad_params.py  hardware_specs.yaml
console/: requirements.txt  rpi_setup.sh  train_controller.py
dashboard/: package-lock.json  package.json  vite.config.ts
embedded/: platformio.ini
frontend/: pubspec.yaml
infra/: cloudbuild-dashboard.yaml  cloudbuild-heavy-worker.yaml  cloudbuild-planning.yaml  cloudbuild-simulation.yaml  cloudbuild.yaml
planning_server/: Dockerfile  requirements.txt
project-cradle/: README.md
shared/: cloud_storage.py  db_backend.py  electronics_catalog.py  export_schemas.py  firestore_db.py  hardware_config.py  pyproject.toml
shared/json_schemas/: pipeline_state.json  robot_spec.json  robot_spec.schema.json  simulation_feedback.schema.json  simulation_request.schema.json
shared/schemas/: __init__.py  command_spec.py  electronics_spec.py  part_spec.py  robot_spec.py  simulation_feedback.py  simulation_request.py
simulation_server/: Dockerfile  requirements.txt
system/: .env.example  backup.sh  daily_backup.ps1  deploy_app.ps1  deploy_app.sh  docker-compose.yml  fetch_secrets.sh  render_pro.py  restore.sh  services.ps1  setup_cloudflare_access.sh  setup_digital_twin.py  setup_gpu.sh  setup_ubuntu.sh
tests/: conftest.py  m1a1_reference_spec.json  test_integration.py  test_llm_pipeline.py
(+144 files in other folders)
