[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nl2bot-shared"
version = "0.1.0"
description = "Shared Pydantic schemas for NL2Bot pipeline"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
]

[tool.setuptools.packages.find]
include = ["shared*"]
